# unread-pocket-rss

./: README.md  main.py  pyproject.toml
.github/workflows/: static.yml
output/: rss.xml
repository/: pocket.py
